--- a/index.html
+++ b/index.html
@@ -98,10 +98,7 @@
           <p>Gateway to the Annapurna region, famous for lakes and adventure sports.</p>
         </a>
         <a href="https://en.wikipedia.org/wiki/Chitwan_National_Park" class="card" target="_blank" rel="noopener noreferrer">
-          <video autoplay muted loop playsinline style="width:100%; height:180px; object-fit:cover; border-radius:8px; display:block;">
-            <source src="Chitwan.mp4" type="video/mp4" loading="lazy">
-            Your browser does not support the video tag.
-          </video>
+          <img src="chitawan map.jpg" alt="Chitwan" loading="lazy" style="width:100%; height:180px; object-fit:cover; border-radius:8px; display:block;">
           <h3>Chitwan</h3>
           <p>Home to Chitwan National Park and diverse wildlife.</p>
         </a>
